--- a/style.css
+++ b/style.css
@@ -149,5 +149,85 @@ main section{
  
 .summary-Container{
     display: flex;
-    gap: 20px;
+    gap: 24px;
+}
+.summary-title{
+    text-align: center;
+    font-weight: 700;
+    font-size: 35px;
+    color: rgb(24, 24, 24);
+}
+.colum-tittle{
+    color: rgb(71,71,71);
+    font-size: 30px;
+    font-weight: 700;
+}
+.Education-title{
+    color: rgb(71, 71, 71);
+    font-weight: 700;
+    font-size: 25px;
+}
+.Education-sub-title{
+    color: rgb(117, 117, 117);
+    font-size: 20px;
+    font-weight: 600;
+}
+.Education-Discription{
+    color: rgb(117, 117, 117);
+    font-size: 16px;
+    font-weight: 400;
+}
+.button-cv{
+    text-align: center;
+    justify-content: center;
+    margin-top: 50px;
+}
+.summary hr{
+    margin: 30px 20px;
+}
+.footer-colom{
+    width: 50%;
+    
+}
+footer{
+    padding: 130px 230px;
+    display: flex;
+    gap: 117px;
+}
+.footer-title{
+    font-weight: 700;
+    font-size: 35px;
+    color: rgb(24, 24, 24);
+}
+.footer-Discription{
+    font-size: 16px;
+    font-weight: 400;
+    color: rgb(71, 71, 71);
+}
+
+footer input[type="text"]{
+    height: 64px;
+    border-radius: 5px;
+    width: 100%;
+    background-color: rgb(255, 255, 255);
+    display: block;
+}
+footer input[type="email"]{
+    height: 64px;
+    border-radius: 5px;
+    width: 100%;
+    margin-top: 24px;
+    background-color: rgb(255, 255, 255);
+    display: block;
+}
+footer textarea{
+    height: 180px;
+    border-radius: 5px;
+    width: 100%;
+    margin-top: 24px;
+    background-color: rgb(255, 255, 255);
+    display: block;
+}
+.footer-btn{
+    margin-top: 24px;
 }
